--- a/APP_FILMS_164/templates/genres/genres_afficher.html
+++ b/APP_FILMS_164/templates/genres/genres_afficher.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% block title %} Afficher GENRES {% endblock %}
+{% block title %} Afficher CATEGORIE {% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				Genres
+				Categorie
 			</p>
             <table class="table table-bordered table-sm">
             {% if data %}
@@ -15,12 +15,7 @@
                             Id
                         </th>
                         <th class="align-middle">
-                            Genre
-                        </th>
-                        <th class="align-middle">
-							Date insertion (pour exemple)
-                        </th>
-                        <th class="align-middle">
+                            Categorie
 
                         </th>
                         <th class="align-middle">
@@ -34,22 +29,19 @@
 				<tbody>
 					<tr>
 						<td class="align-middle">
-							{{ row.id_genre }}
+							{{ row.id_categorie }}
 						</td>
 						<td class="align-middle">
-							{{ row.intitule_genre }}
-						</td>
-						<td class="align-middle">
-							{{ row.date_ins_genre }}
+							{{ row.nom_categorie }}
 						</td>
 						<td class="text-center" class="align-middle">
 							<a class="btn btn-primary" href="{{ url_for('genres_ajouter_wtf') }}" role="button">Ajouter</a>
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-warning" href="{{ url_for('genre_update_wtf', id_genre_btn_edit_html=row.id_genre) }}" role="button">Edit</a>
+							<a class="btn btn-warning" href="{{ url_for('genre_update_wtf', id_genre_btn_edit_html=row.id_genre) }}" role="button">Modifier</a>
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-danger" href="{{ url_for('genre_delete_wtf', id_genre_btn_delete_html=row.id_genre) }}" role="button">Delete</a>
+							<a class="btn btn-danger" href="{{ url_for('genre_delete_wtf', id_genre_btn_delete_html=row.id_genre) }}" role="button">Supprimer</a>
 						</td>
 					</tr>
 				</tbody>
@@ -57,7 +49,7 @@
 				<tbody>
 					<tr>
 						<td>
-							Aucun genre.
+							Aucune categorie.
 						</td>
 						<td>
 							<a class="btn btn-primary" href="{{ url_for('genres_ajouter_wtf') }}" role="button">Ajouter</a>
