--- a/APP_FILMS_164/templates/genres/genres_ajouter_wtf.html
+++ b/APP_FILMS_164/templates/genres/genres_ajouter_wtf.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Ajouter un GENRE (WTF) {% endblock %}
+{% block title %} Ajouter une catégorie (WTF) {% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
