--- a/APP_FILMS_164/templates/genres/genre_update_wtf.html
+++ b/APP_FILMS_164/templates/genres/genre_update_wtf.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% block title %} Editer un GENRE (WTF) {% endblock %}
+{% block title %} Editer une Catégorie (WTF) {% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				Editer un GENRE
+				Editer une Catégorie
 			</p>
 			<form action="" method="POST" novalidate>
 				<!-- Protection contre les attaques Cross-Site Request Forgery (CSRF) -->
@@ -22,7 +22,7 @@
 						{{ form_update.date_genre_wtf_essai.label }}<br>
 						{{ form_update.date_genre_wtf_essai(size=32) }}<br>
 						{% for error in form_update.date_genre_wtf_essai.errors %}
-							<span style="color: red;">[{{ error }}]</span>
+							<span style="color: blue;">[{{ error }}]</span>
 						{% endfor %}
 					</p>
 				</div>
