--- a/APP_FILMS_164/templates/genres/genre_delete_wtf.html
+++ b/APP_FILMS_164/templates/genres/genre_delete_wtf.html
@@ -12,9 +12,9 @@
 				{{ form_delete.hidden_tag() }}
 				<table class="table table-bordered table-sm">
 					{% if data_films_associes %}
-						<h3>Ce genre est associé avec le(s) film(s) suivant(s) :</h3>
+						<h3>Cette catégorie est associé avec le(s) jeux suivant(s) :</h3>
 					{% else %}
-						<h3>Ce genre à effacer n'est associé à aucun film.</h3>
+						<h3>Cette catégorie à effacer n'est associé à aucun jeux.</h3>
 					{% endif %}
 					{% if data_films_associes %}
 						<thead>
