--- a/APP_FILMS_164/templates/films/film_update_wtf.html
+++ b/APP_FILMS_164/templates/films/film_update_wtf.html
@@ -4,53 +4,71 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<p>
-				Editer un FILM
-			</p>
+			<p>Editer un FILM</p>
 			<form action="" method="POST" novalidate>
 				<!-- Protection contre les attaques Cross-Site Request Forgery (CSRF) -->
-				{{ form_update_film.hidden_tag() }}
+				{{ form_update_jeu.hidden_tag() }}
 				<div class="form-group">
 					<p>
-						{{ form_update_film.nom_film_update_wtf.label }}<br>
-						{{ form_update_film.nom_film_update_wtf(cols=50, rows=3) }}<br>
-						{% for error in form_update_film.nom_film_update_wtf.errors %}
+						{{ form_update_jeu.nom_jeu_update_wtf.label }}<br>
+						{{ form_update_jeu.nom_jeu_update_wtf(cols=50, rows=3) }}<br>
+						{% for error in form_update_jeu.nom_jeu_update_wtf.errors %}
 						<span style="color: red;">[{{ error }}]</span>
 						{% endfor %}
 					</p>
 					<p>
-						{{ form_update_film.duree_film_update_wtf.label }}<br>
-						{{ form_update_film.duree_film_update_wtf(size=32) }}<br>
-						{% for error in form_update_film.duree_film_update_wtf.errors %}
+						{{ form_update_jeu.duree_moyenne_jeu_update_wtf.label }}<br>
+						{{ form_update_jeu.duree_moyenne_jeu_update_wtf(size=32) }}<br>
+						{% for error in form_update_jeu.duree_moyenne_jeu_update_wtf.errors %}
 						<span style="color: red;">[{{ error }}]</span>
 						{% endfor %}
 					</p>
 					<p>
-						{{ form_update_film.description_film_update_wtf.label }}<br>
-						{{ form_update_film.description_film_update_wtf(cols=50, rows=10) }}<br>
-						{% for error in form_update_film.description_film_update_wtf.errors %}
+						{{ form_update_jeu.image_jeu_update_wtf.label }}<br>
+						{{ form_update_jeu.image_jeu_update_wtf(cols=100, rows=10) }}<br>
+						{% for error in form_update_jeu.image_jeu_update_wtf.errors %}
 						<span style="color: red;">[{{ error }}]</span>
 						{% endfor %}
 					</p>
 					<p>
-						{{ form_update_film.cover_link_film_update_wtf.label }}<br>
-						{{ form_update_film.cover_link_film_update_wtf(cols=100, rows=10) }}<br>
-						{% for error in form_update_film.cover_link_film_update_wtf.errors %}
+						{{ form_update_jeu.date_sortie_jeu_update_wtf.label }}<br>
+						{{ form_update_jeu.date_sortie_jeu_update_wtf(size=12) }}<br>
+						{% for error in form_update_jeu.date_sortie_jeu_update_wtf.errors %}
 						<span style="color: red;">[{{ error }}]</span>
 						{% endfor %}
 					</p>
 					<p>
-						{{ form_update_film.datesortie_film_update_wtf.label }}<br>
-						{{ form_update_film.datesortie_film_update_wtf(size=12) }}<br>
-						{% for error in form_update_film.datesortie_film_update_wtf.errors %}
+						{{ form_update_jeu.joueurs_min_update_wtf.label }}<br>
+						{{ form_update_jeu.joueurs_min_update_wtf(size=12) }}<br>
+						{% for error in form_update_jeu.joueurs_min_update_wtf.errors %}
+						<span style="color: red;">[{{ error }}]</span>
+						{% endfor %}
+					</p>
+					<p>
+						{{ form_update_jeu.joueurs_max_update_wtf.label }}<br>
+						{{ form_update_jeu.joueurs_max_update_wtf(size=12) }}<br>
+						{% for error in form_update_jeu.joueurs_max_update_wtf.errors %}
+						<span style="color: red;">[{{ error }}]</span>
+						{% endfor %}
+					</p>
+					<p>
+						{{ form_update_jeu.age_min_update_wtf.label }}<br>
+						{{ form_update_jeu.age_min_update_wtf(size=12) }}<br>
+						{% for error in form_update_jeu.age_min_update_wtf.errors %}
+						<span style="color: red;">[{{ error }}]</span>
+						{% endfor %}
+					</p>
+					<p>
+						{{ form_update_jeu.age_max_update_wtf.label }}<br>
+						{{ form_update_jeu.age_max_update_wtf(size=12) }}<br>
+						{% for error in form_update_jeu.age_max_update_wtf.errors %}
 						<span style="color: red;">[{{ error }}]</span>
 						{% endfor %}
 					</p>
 				</div>
-				{{ form_update_film.submit(class="btn btn-primary") }}
+				{{ form_update_jeu.submit(class="btn btn-primary") }}
 			</form>
 		</div>
 	</div>
 </div>
 {% endblock %}
-
