--- a/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
+++ b/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
@@ -71,7 +71,7 @@
                         <a class="btn btn-primary" href="{{ url_for('film_add_wtf') }}" role="button">Ajouter</a>
                     </td>
                     <td class="align-middle">
-                        <a class="btn btn-warning" href="{{ url_for('film_update_wtf', id_film_btn_edit_html=row.id_film) }}" role="button">Modifier</a>
+                        <a class="btn btn-warning" href="{{ url_for('film_update_wtf', id_film_btn_edit_html=row.id_jeux) }}" role="button">Modifier</a>
                     </td>
                     <td class="align-middle">
                         <a class="btn btn-danger" href="{{ url_for('film_delete_wtf', id_film_btn_delete_html=row.id_film ) }}" role="button">Supprimer</a>
@@ -79,7 +79,7 @@
                 </tr>
                 <tr>
                     <td colspan="9">
-                        <a class="btn btn-warning" href="{{ url_for('edit_genre_film_selected', id_film_genres_edit_html=row.id_film) }}" role="button">Modifier</a>
+                        <a class="btn btn-warning" href="{{ url_for('edit_genre_film_selected', id_film_genres_edit_html=row.id_jeux) }}" role="button">Modifier</a>
                         {{ row.GenresFilms|default("PAS DE CATEGORIE", True) }}
                     </td>
                 </tr>
