--- a/APP_FILMS_164/templates/films_genres/films_genres_modifier_tags_dropbox.html
+++ b/APP_FILMS_164/templates/films_genres/films_genres_modifier_tags_dropbox.html
@@ -47,7 +47,7 @@
                                 id
                             </th>
                             <th class="">
-                                Titre
+                                Nom
                             </th>
                             <th class="">
                                 Durée
@@ -56,10 +56,19 @@
                                 Date sortie
                             </th>
                             <th class="">
-                                Description
+                                Joueurs Min
                             </th>
                             <th class="">
-                                Affiche
+                                Joueurs Max
+                            </th>
+                            <th class="">
+                                Age Min
+                            </th>
+                            <th class="">
+                                Age Max
+                            </th>
+                            <th class="">
+                                Image
                             </th>
                         </tr>
                     </thead>
@@ -69,22 +78,31 @@
 				<tbody>
 					<tr>
 						<td class="align-middle">
-							{{ row.id_film }}
+							{{ row.id_jeux }}
 						</td>
 						<td class="align-middle">
-							{{ row.nom_film }}
+							{{ row.nom_jeu }}
 						</td>
 						<td class="align-middle">
-							{{ row.duree_film|default("", True) }}
+							{{ row.durée_moyenne|default("", True) }}
 						</td>
 						<td class="align-middle">
-							{{ row.date_sortie_film|default("", True) }}
+							{{ row.date_sortie_jeux|default("", True) }}
 						</td>
 						<td class="align-middle">
-							{{ row.description_film|default("", True) }}
+							{{ row.joueurs_min|default("", True) }}
+						</td>
+                        <td class="align-middle">
+							{{ row.joueurs_max|default("", True) }}
+						</td>
+                        <td class="align-middle">
+							{{ row.age_min|default("", True) }}
+						</td>
+                        <td class="align-middle">
+							{{ row.age_max|default("", True) }}
 						</td>
 						<td class="align-middle">
-                            <img class="img" src={{ row.cover_link_film|default(None, True) }} style="border: 0;display:block; width:150px; max-height:auto;" alt = "image masquée FFP67 (in COVID-29 Memory) (absente) mod 164">
+                            <img class="img" src={{ row.image_jeux|default(None, True) }} style="border: 0;display:block; width:150px; max-height:auto;" alt = "image masquée FFP67 (in COVID-29 Memory) (absente) mod 164">
 						</td>
 					</tr>
 				</tbody>
@@ -112,11 +130,11 @@
                 <div class="qtagselect isw360">
                     <select id="OM_JTSD" name="name_select_tags" class="qtagselect__select" multiple>
                         {% for row in data_genres_non_attribues %}
-                            <option value="{{ row.id_genre }}" name="name_tags_non_attribues_html" class="isblue" >{{ row.intitule_genre }}</option>
+                            <option value="{{ row.id_categorie }}" name="name_tags_non_attribues_html" class="isblue" >{{ row.nom_categorie }}</option>
                         {% endfor %}
 
                         {% for row in data_genres_attribues %}
-                            <option value="{{ row.id_genre }}" name="name_tags_attribues_html" class="ispurple" selected>{{ row.intitule_genre }}</option>
+                            <option value="{{ row.id_categorie }}" name="name_tags_attribues_html" class="ispurple" selected>{{ row.nom_categorie }}</option>
                         {% endfor %}
                     </select>
                 </div>
