--- a/APP_FILMS_164/templates/films/film_update_wtf.html
+++ b/APP_FILMS_164/templates/films/film_update_wtf.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %} Editer un FILM (WTF) {% endblock %}
+{% block title %} Editer un Jeu (WTF) {% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<p>Editer un FILM</p>
+			<p>Editer un Jeu</p>
 			<form action="" method="POST" novalidate>
 				<!-- Protection contre les attaques Cross-Site Request Forgery (CSRF) -->
 				{{ form_update_jeu.hidden_tag() }}
