--- a/APP_FILMS_164/templates/films/film_delete_wtf.html
+++ b/APP_FILMS_164/templates/films/film_delete_wtf.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% block title %} Effacer un FILM (WTF) {% endblock %}
+{% block title %} Effacer un Jeu (WTF) {% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				Effacer un FILM
+				Effacer un Jeu
 			</p>
 			<table class="table table-responsive-sm">
 				{% if data_film_del %}
@@ -77,7 +77,7 @@
 				{{ form_delete_film.submit_btn_conf_del_film(class="btn btn-info") }}
 
 				{% if btn_submit_del %}
-					{{ form_delete_film.submit_btn_del_film(class="btn btn-danger") }}
+					{{ form_delete_film.submit_btn_del_jeu(class="btn btn-danger") }}
 				{% endif %}
 
 				{{ form_delete_film.submit_btn_annuler(class="btn btn-primary") }}
