modifications diverses.... je commance à avoir envie de mourir

--- a/APP_FILMS_164/templates/home.html
+++ b/APP_FILMS_164/templates/home.html
@@ -10,6 +10,9 @@
 			<h3>
 				CRUD sur 3 tables autour des films et leurs genres associés<br>
 			</h3>
+			<h3>
+				On se trouve actuellement sur la page d'accueil<br>
+			</h3>
 			<ul>
 				<li class="list-item">
 					Lire le readme.md
