--- a/APP_FILMS_164/templates/films/film_delete_wtf.html
+++ b/APP_FILMS_164/templates/films/film_delete_wtf.html
@@ -11,54 +11,66 @@
 				{% if data_film_del %}
 				<thead>
 				<tr>
-					<th class="">
-						Id
-					</th>
-					<th class="">
-						Nom
-					</th>
-					<th class="">
-						Durée
-					</th>
-					<th class="">
-						Date de sortie
-					</th>
-					<th class="">
-						Description
-					</th>
-					<th class="">
-						Affiche
-					</th>
+					<th>
+                        Id
+                    </th>
+                    <th>
+                        Nom
+                    </th>
+                    <th>
+                        Durée Moyenne
+                    </th>
+                    <th>
+                        Date de sortie
+                    </th>
+                    <th>
+                        Joueurs min
+                    </th>
+                    <th>
+                        Joueurs max
+                    </th>
+                    <th>
+                        Age min
+                    </th>
+                    <th>
+                        Age max
+                    </th>
+                    <th>
+                        Image du jeu
+                    </th>
 				</tr>
 				</thead>
 				{% endif %}
 				{% for row in data_film_del %}
 				<tbody>
 				<tr>
-					<th class="align-middle">
-						{{ row.id_film }}
-					</th>
-					<th class="align-middle">
-						{{ row.nom_film }}
-					</th>
-					<th class="align-middle">
-						{{ row.duree_film|default("", True) }}
-					</th>
-					<th class="align-middle">
-						{{ row.date_sortie_film|default("", True) }}
-					</th>
-					<th class="align-middle">
-						{{ row.description_film|default("", True) }}
-					</th>
-					<th class="align-middle">
-						<img class="img" src={{ row.cover_link_film|default(None, True) }}
-							 style="border: 0;display:block; width:150px; max-height:auto;"
-							 alt="image masquée FFP8 (in COVID-19 Memory) (absente) mod 164">
-					</th>
-
-				<tr>
-
-				</tr>
+					<td class="align-middle">
+                        {{ row.id_jeux }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.nom_jeu }}
+                    </td>
+                    <td class="align-middle">
+						{{ row.durée_moyenne|default("", True)|string }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.date_sortie_jeux|default("", True) }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.joueurs_min|default("", True) }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.joueurs_max|default("", True) }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.age_min|default("", True) }}
+                    </td>
+                    <td class="align-middle">
+						{{ row.age_max|default("", True) }}
+                    </td>
+					<td class="align-middle">
+						<img class="img" src="{{ row.image_jeux|default(None, True) }}" style="border: 0;display:block; width:200px; height:auto;" alt="Aucune image trouvée">
+                    </td>
 				</tr>
 				</tbody>
 				{% else %}
@@ -74,7 +86,7 @@
 			<form action="" method="POST" novalidate>
 				<!-- Protection contre les attaques Cross-Site Request Forgery (CSRF) -->
 				{{ form_delete_film.hidden_tag() }}
-				{{ form_delete_film.submit_btn_conf_del_film(class="btn btn-info") }}
+				{{ form_delete_film.submit_btn_conf_del_jeu(class="btn btn-info") }}
 
 				{% if btn_submit_del %}
 					{{ form_delete_film.submit_btn_del_jeu(class="btn btn-danger") }}
