--- a/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
+++ b/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
@@ -74,7 +74,7 @@
                         <a class="btn btn-warning" href="{{ url_for('film_update_wtf', id_film_btn_edit_html=row.id_jeux) }}" role="button">Modifier</a>
                     </td>
                     <td class="align-middle">
-                        <a class="btn btn-danger" href="{{ url_for('film_delete_wtf', id_film_btn_delete_html=row.id_film ) }}" role="button">Supprimer</a>
+                        <a class="btn btn-danger" href="{{ url_for('film_delete_wtf', id_film_btn_delete_html=row.id_jeux ) }}" role="button">Supprimer</a>
                     </td>
                 </tr>
                 <tr>
