quelques modifications mineures

--- a/APP_FILMS_164/templates/essai/template_pour_route_essai.html
+++ b/APP_FILMS_164/templates/essai/template_pour_route_essai.html
@@ -2,23 +2,22 @@
 {% block title %} Page route essai {% endblock %}
 {% block body %}
 <div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h3>
-				 "route essai"
-			</h3>
-			<main class="site-content">
-				<p>
-					Démo pour comprendre l'association dans templates/base.html (ligne 52)
-					url_for('route_hommage_a_u_x_V_ictim_es_du_monstre_du_mod_1_6_4')
-				</p>
-				<p>
-					et le fichier Python "zzzdemos/routes_demos.py" (ligne 20)
-					definition de la fonction "def route_hommage_a_u_x_V_ictim_es_du_monstre_du_mod_1_6_4():"
-					qui va retourner la page actuelle "essai/template_pour_route_essai.html"
-				</p>
-			</main>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="embed-responsive embed-responsive-16by9">
+                <video controls autoplay class="embed-responsive-item" id="myVideo">
+                    <source src="https://cdn.mtdv.me/video/rick.mp4" type="video/mp4">
+                    Votre navigateur ne supporte pas la lecture de vidéos.
+                </video>
+            </div>
+        </div>
+    </div>
 </div>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var video = document.getElementById('myVideo');
+        video.volume = 0.05; // Réglez le volume à 20% de sa valeur maximale
+        video.requestFullscreen();
+    });
+</script>
 {% endblock %}
