--- a/APP_FILMS_164/templates/films_genres/films_genres_modifier_tags_dropbox.html
+++ b/APP_FILMS_164/templates/films_genres/films_genres_modifier_tags_dropbox.html
@@ -78,32 +78,32 @@
 				<tbody>
 					<tr>
 						<td class="align-middle">
-							{{ row.id_jeux }}
-						</td>
-						<td class="align-middle">
-							{{ row.nom_jeu }}
-						</td>
-						<td class="align-middle">
-							{{ row.durée_moyenne|default("", True) }}
-						</td>
-						<td class="align-middle">
-							{{ row.date_sortie_jeux|default("", True) }}
-						</td>
-						<td class="align-middle">
-							{{ row.joueurs_min|default("", True) }}
-						</td>
-                        <td class="align-middle">
-							{{ row.joueurs_max|default("", True) }}
-						</td>
-                        <td class="align-middle">
-							{{ row.age_min|default("", True) }}
-						</td>
-                        <td class="align-middle">
-							{{ row.age_max|default("", True) }}
-						</td>
-						<td class="align-middle">
-                            <img class="img" src={{ row.image_jeux|default(None, True) }} style="border: 0;display:block; width:150px; max-height:auto;" alt = "image masquée FFP67 (in COVID-29 Memory) (absente) mod 164">
-						</td>
+                        {{ row.id_jeux }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.nom_jeu }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.durée_moyenne|default("", True) }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.date_sortie_jeux|default("", True) }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.joueurs_min|default("", True) }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.joueurs_max|default("", True) }}
+                    </td>
+                    <td class="align-middle">
+                        {{ row.age_min|default("", True) }}
+                    </td>
+                    <td class="align-middle">
+						{{ row.age_max|default("", True) }}
+                    </td>
+                    <td class="align-middle">
+						<img class="img" src="{{ row.image_jeux|default(None, True) }}" style="border: 0;display:block; width:200px; height:auto;" alt="Aucune image trouvée">
+                    </td>
 					</tr>
 				</tbody>
             {% else %}
