--- a/APP_FILMS_164/templates/films/film_delete_wtf.html
+++ b/APP_FILMS_164/templates/films/film_delete_wtf.html
@@ -89,7 +89,7 @@
 				{{ form_delete_film.submit_btn_conf_del_jeu(class="btn btn-info") }}
 
 				{% if btn_submit_del %}
-					{{ form_delete_film.submit_btn_del_jeu(class="btn btn-danger") }}
+					{{ form_delete_film.submit_btn_del_film(class="btn btn-danger") }}
 				{% endif %}
 
 				{{ form_delete_film.submit_btn_annuler(class="btn btn-primary") }}
