--- a/APP_FILMS_164/templates/base.html
+++ b/APP_FILMS_164/templates/base.html
@@ -40,7 +40,7 @@
 <div class="container">
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-secondary">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{{ url_for('mapageprincipale') }}">MODULE 164 OM EPSIC, NATHAN CHABLOZ</a>
+			<a class="navbar-brand" href="{{ url_for('mapageprincipale') }}">MODULE 164 OM EPSIC NATHAN CHABLOZ</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -50,17 +50,12 @@
 						<!--		Afficher la liste des genres dans l'ordre (ASC) et tous les genres (0)-->
 						<a class="nav-link" href="{{ url_for('genres_afficher', order_by='ASC', id_genre_sel=0) }}">Catégories</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navdropdownfilms" role="button"
-						   data-bs-toggle="dropdown" aria-expanded="false">
-							Films
+					<li class="nav-item">
+						<a class="nav-link" href="{{ url_for('films_genres_afficher', id_film_sel=0) }}" id="navdropdownfilms" role="button">
+							Jeux
 						</a>
-						<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-							<li><a class="nav-link" href="{{ url_for('films_genres_afficher', id_film_sel=0) }}">Jeux</a>
-							</li>
-							<li><a class="nav-link" href="{{ url_for('films_genres_afficher', id_film_sel=0) }}">Jeux/Catégories</a></li>
-						</ul>
 					</li>
+
 
 
 					<li class="nav-item">
