--- a/APP_FILMS_164/templates/genres/genres_afficher.html
+++ b/APP_FILMS_164/templates/genres/genres_afficher.html
@@ -43,6 +43,9 @@
 						<td class="text-center" class="align-middle">
 							<a class="btn btn-danger" href="{{ url_for('genre_delete_wtf', id_genre_btn_delete_html=row.id_categorie) }}" role="button">Supprimer</a>
 						</td>
+						<td class="text-center" class="align-middle">
+							<a class="btn btn-info" href="{{ url_for('consulter_categorie', id_genre_btn_consulter_html=row.id_categorie) }}" role="button">Consulter</a>
+						</td>
 					</tr>
 				</tbody>
             {% else %}
