--- a/APP_FILMS_164/templates/films/films_afficher.html
+++ b/APP_FILMS_164/templates/films/films_afficher.html
@@ -14,6 +14,9 @@
 						  Nom
 						</th>
 						<th class="" >
+						  Prix
+						</th>
+						<th class="" >
 						  Durée Moyenne
 						</th>
 						<th class="" >
@@ -42,6 +45,9 @@
 					  </th>
 					  <th class="align-middle">
 						{{ row.nom_jeu }}
+					  </th>
+					<th class="align-middle">
+						{{ row.prix_jeux }}
 					  </th>
 					  <th class="align-middle">
 						{{ row.durée_moyenne|default("", True) }}
