--- a/APP_FILMS_164/templates/base.html
+++ b/APP_FILMS_164/templates/base.html
@@ -46,7 +46,6 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
 				<ul class="navbar-nav">
-					<li class="nav-item">
 						<!--		Afficher la liste des genres dans l'ordre (ASC) et tous les genres (0)-->
 						<a class="nav-link" href="{{ url_for('genres_afficher', order_by='ASC', id_genre_sel=0) }}">Catégories</a>
 					</li>
@@ -55,25 +54,13 @@
 							Jeux
 						</a>
 					</li>
-
-
-
 					<li class="nav-item">
-						<a class="nav-link" href="{{ url_for('route_hommage_a_u_x_V_ictim_es_du_monstre_du_mod_1_6_4') }}">HELP</a>
+						<a class="nav-link" href="https://github.com/NathanChabloz/Chabloz_Nathan_EXPI1A_Jeux_164_2024" target="_blank">GitHub Nathan Chabloz</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{{ url_for('personnes_taille_dict') }}">Démo "TAILLE"</a>
+						<a class="nav-link" href="https://info164.github.io/doc164ver1/index.html" target="_blank">Documentation module 164</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Autres démos
-						</a>
-						<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-							<li><a class="dropdown-item" href="{{ url_for('index') }}">Démo index (sans template)</a></li>
-							<li><a class="dropdown-item" href="404.html">404</a></li>
-							<li><a class="dropdown-item" href="{{ url_for('mon_premier_wtform') }}">Essai form</a></li>
-							<li><a class="dropdown-item" href="{{ url_for('demo_select_wtf') }}">Essai DROPDOWN</a></li>
-						</ul>
+					<li class="nav-item">
 					</li>
 				</ul>
 			</div>
