--- a/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
+++ b/APP_FILMS_164/templates/films_genres/films_genres_afficher.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Afficher FILMS {% endblock %}
 {% block body %}
-<div class="container">
+<div class="container" style="margin-left: 100px;">
     <div class="col-md-12">
         <table class="table table-responsive-sm">
             {% if data %}
