--- a/APP_FILMS_164/templates/genres/consulter_categorie.html
+++ b/APP_FILMS_164/templates/genres/consulter_categorie.html
@@ -3,26 +3,23 @@
 {% block body %}
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <h2>Détails de la catégorie</h2>
-            <p>ID : {{ categorie.id_categorie }}</p>
-            <p>Nom : {{ categorie.nom_categorie }}</p>
+            <h2>Détails de la catégorie {{ categorie.nom_categorie }}</h2>
 
-            ## Jeux dans cette catégorie
+            <h3>Jeux dans cette catégorie</h3>
             <table class="table table-bordered table-sm">
                 <thead>
                     <tr>
-                        <th>ID</th>
-                        <th>Nom</th>
-                        <th>Image</th>
+                      <th>ID</th>
+                      <th>Nom</th>
+                      <th>Image</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for jeu in jeux %}
                     <tr>
-                        <td>{{ jeu.id_jeux }}</td>
-                        <td>{{ jeu.nom_jeu }}</td>
-                        <td><img class="image" src="{{ jeu.image_jeux }}" alt="{{ jeu.nom_jeu }}" width="400"></td>
+                        <td class="align-midle">{{ jeu.id_jeux }}</td>
+                        <td class="align-midle">{{ jeu.nom_jeu }}</td>
+                        <td class="align-midle"><img class="image" src="{{ jeu.image_jeux }}" alt="{{ jeu.nom_jeu }}" width="300"></td>
                     </tr>
                     {% endfor %}
                 </tbody>
